--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,10 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'checkstyle'
+apply plugin: 'pmd'
+apply plugin: 'findbugs'
+
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
@@ -28,4 +32,17 @@ dependencies {
 	runtime('com.h2database:h2')
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+}
+
+
+checkstyle {
+    toolVersion = '7.4'
+    checkstyleTest.enabled = false
+	config = rootProject.resources.text.fromFile('/checkstyle/rules.xml')
+}
+
+tasks.withType(Checkstyle) {
+	reports {
+		html.enabled=true
+	}
 }
