--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ checkstyle {
 
 tasks.withType(Checkstyle) {
 	reports {
-		html.enabled=true
+		html{
+		destination "${rootProject.buildDir}/reports/checkstyle/checkstyle-result.xml"
+		}
 	}
 }
