--- a/build.gradle
+++ b/build.gradle
@@ -41,10 +41,41 @@ checkstyle {
 	config = rootProject.resources.text.fromFile('/checkstyle/rules.xml')
 }
 
+pmd {
+	ignoreFailures = true
+	pmdTest.enabled=false
+	ruleSets = [
+			'java-basic',
+			'java-braces',
+			'java-clone',
+			'java-codesize',
+			'java-comments',
+			'java-controversial',
+			'java-coupling',
+			'java-design',
+			'java-empty',
+			'java-finalizers',
+			'java-imports',
+			'java-optimizations',
+			'java-strictexception',
+			'java-strings',
+			'java-typeresolution',
+			'java-unnecessary',
+			'java-unusedcode'
+	]
+}
+
 tasks.withType(Checkstyle) {
 	reports {
 		xml{
 		destination "${rootProject.buildDir}/reports/checkstyle/checkstyle-result.xml"
 		}
+	}
+}
+
+tasks.withType(Pmd){
+	reports{
+		xml.enabled=true
+		html.enabled=true
 	}
 }
